fix: modify word wrap style

--- a/src/component/element/element_mid/HomeContentItem/HomeContentItem.module.scss
+++ b/src/component/element/element_mid/HomeContentItem/HomeContentItem.module.scss
@@ -37,6 +37,7 @@
     }
     .postDescription {
       height: 78px;
+      word-wrap: break-word;
       margin-top: 8px;
       font-weight: 400;
       font-size: 16px;
